--- a/package.json
+++ b/package.json
@@ -14,21 +14,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
     "helmet": "^8.0.0",
     "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.5.14",
     "@types/js-yaml": "^4.0.9",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.10",
     "@types/swagger-ui-express": "^4.1.7",
