--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn src/server.ts",
-    "clean": "rm -rf package-lock.json node_modules",
+    "clean": "rm -rf package-lock.json node_modules dist",
     "lint": "eslint 'src/**/*.ts'",
     "format": "prettier --write 'src/**/*.ts'",
     "migration": "ts-node src/database/migration.ts",
-    "test": "jest"
+    "test": "jest",
+    "prod": "rm -rf dist && npm run build && pm2 start dist/src/server.js --name inventory-api",
+    "stop": "pm2 stop inventory-api",
+    "reset": "npm run stop && npm run prod",
+    "restart": "pm2 restart inventory-api",
+    "delete": "pm2 delete inventory-api"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
